[package]
name = "rs-github-upvotes"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
